Fix: Removing images that break the design

--- a/src/app/components/survey/survey.component.scss
+++ b/src/app/components/survey/survey.component.scss
@@ -1,3 +1,5 @@
 .survey {
-  margin-top: 100px;
+  h1 {
+    margin-top: 64px;
+  }
 }
